# futschik

./: .gitignore  05_sync3.rar  README.md  meson.build
01_processes/: meson.build
01_processes/src/: aba.cpp  charout.cpp  main.cpp
02_processes/: meson.build
02_processes/src/: content.cpp  contest.cpp
02_threads/: meson.build
02_threads/src/: contest.cpp
03_sync1/: meson.build
03_sync1/include/: account.h
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h  work_queue.h
04_sync2/src/: loadsim.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/include/: philosopher.h  semaphor.h  utils.h
05_sync3/src/: dining.cpp  philosopher.cpp  semaphor.cpp  utils.cpp
06_future/: meson.build  meson_options.txt
06_future/src/: factoring.cpp
Aufgabe_1/: meson.build
src/: aba.cpp  main.cpp
