project('XXX', 'cpp',
        license : ['Boost'],
        version : '0.1',
        default_options : ['cpp_std=c++2a', 'warning_level=3', 'werror=true'])

# thread_dep = dependency('threads')




src = ['src/contest.cpp']

executable('contest',
            sources : src,
            include_directories : inc_dir,
           )


